[package]
name = "rmtled"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = 3
debug = 2
lto = true

[profile.dev]
opt-level = 1
lto = false

[dependencies]
defmt = "0.3.8"
# defmt-rtt = "0.4.1"

static_cell = { version = "2.1.0", features = ["nightly"] }
fixedstr = { version = "0.5.7", features = ["no-alloc"] }

embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.1", features = ["defmt"] } # tik-hz-? can be changed

esp-hal = { version = "0.19.0", features = ["defmt", "esp32c3"] }
esp-alloc = { version = "0.4.0" }
esp-wifi = { version = "0.7.1", default-features=false, features = ["esp32c3", "wifi-default", "utils", "phy-enable-usb", "embassy-net", "ble", "defmt"] }
esp-hal-embassy = { version = "0.2.0", features = ["defmt", "esp32c3", "integrated-timers"] }


toml-cfg = "0.2.0"
uuid = { version = "1.10.0", default-features = false }

bleps = { path = "../contrib/bleps/bleps", default-features = false, features = ["macros", "async", "defmt"], optional = true}

bt-hci = { path =  "../contrib/bt-hci", features = ["defmt", "embassy-time"], optional = true}
trouble-host = {path = "../contrib/trouble/host", features = ["defmt"], optional = true}

[dev-dependencies]

embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960", "executor-thread", "defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
esp-println = { version = "0.10.0", features = ["defmt-espflash", "esp32c3"] }
esp-backtrace = { version = "0.13.0", features = ["esp32c3", "panic-handler", "exception-handler", "defmt"] }
esp-hal-procmacros = { version = "0.12.0", features = ["embassy"] }

macaddr = { version = "1.0.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
ouroboros = { version = "0.18.4", default-features = false }
pin-utils = "0.1.0"

[features]
bleps = ["dep:bleps"]
trouble = ["dep:trouble-host", "dep:bt-hci"]

default = ["bleps"]
